--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="fragments_error_in_input_value">The number of fragments must be between 0 and 9</string>
     <string name="fragments_error_in_input_type">Has to be a number</string>
     <string name="on_item_selected">Selection: %1$d - %2$s</string>
+    <string name="show_preferences">Show Preferences</string>
 </resources>
