--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -8,7 +8,7 @@
     <string name="main_title">Asteroides</string>
     <string name="about_us_text">Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>
     <string name="lastScores">Ultimas Puntuaciones</string>
-    <string name="Search">Buscar</string>
+    <string name="menu_search">Buscar</string>
 
     <!-- Seccion de Prefrences -->
     <string name="has_music_summary">Se reproduce música de fondo</string>
