--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,12 +26,27 @@
     <string name="has_limit_missiles_title">Limit Missiles to 3</string>
     <string name="has_limit_missiles">Only allow 3 missiles at the same time</string>
     <string name="show_preferences">Show Preferences</string>
-    <string name="txt_won">You WON!!!</string>
-    <string name="txt_score">Your score by time is %1$d</string>
+    <string name="txt_won">GameOver!!!</string>
+    <string name="txt_score">Your score is %1$d</string>
     <string name="lbl_nickname">Write HERE your Nickname</string>
     <string name="btn_accept">Accept</string>
     <string name="txt_loose">Ohhhh Sooo Close</string>
     <string name="txt_loose_extraline">Best luck next time :)</string>
     <string name="txt_no_score_1">No Scores yet</string>
     <string name="txt_no_score_2">Beat the game and put your score here</string>
+    <string name="score_storage_summary">Select the storage type for your scores</string>
+    <string name="score_storage_title">Storage of the scores</string>
+    <string name="sd_no_write">Can not write to external memory</string>
+    <string name="sd_no_read">Can not read in external memory</string>
+    <string name="external_storage_title">External storage unit</string>
+    <string name="external_storage_summary">Select in which external storage unit the scores will be saved</string>
+    <string name="no_permission_external_storage">No permission is granted to use external storage, preferences will be used instead</string>
+    <string name="title_activity_converter">ConverterActivity</string>
+    <string name="converter">Converter</string>
+    <string name="external_url_summary">Custom web service host</string>
+    <string name="external_url_title">Custom server</string>
+    <string name="input_type_summary">Select the valid inputs for the game</string>
+    <string name="input_type_title">Inputs</string>
+    <string name="external_url_default_summary">Use the default Web Service</string>
+    <string name="external_url_default_title">Default Web Service</string>
 </resources>
